# devkit-cli

./: CHANGELOG.md  README.md
devkit/: __init__.py  cli.py  generator.py  pyproject.toml  reporter.py
devkit/.github/workflows/: ci.yml
devkit/devkit/: validator.py
devkit/tests/: test_devkit.py
