[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devkit-cli"
version = "0.1.0"
description = "Developer tooling for API schema validation and SDK stub generation"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Pradeep Kumar Konda", email = "pradeepkonda2003@gmail.com" }]
requires-python = ">=3.11"
keywords = ["openapi", "sdk", "developer-tools", "cli", "api", "validation"]
dependencies = ["click>=8.1", "PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.4", "mypy>=1.8", "types-PyYAML"]

[project.scripts]
devkit = "devkit.cli:cli"

[project.urls]
Homepage = "https://github.com/pradeepkonda003/devkit-cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=devkit --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
